--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,17 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/x-data-grid": "^7.22.3",
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.8",
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
     "numeral": "^2.0.6",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-redux": "^9.1.2",
     "recharts": "^2.13.3",
+    "redux-persist": "^6.0.0",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
